temba/contacts/search/gen/ContactSearchParser.py
# Generated from ContactSearch.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class ContactSearchParser ( Parser ):

    grammarFileName = "ContactSearch.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'" ]

    symbolicNames = [ u"<INVALID>", u"LPAREN", u"RPAREN", u"AND", u"OR", 
                      u"COMPARATOR", u"TEXT", u"STRING", u"WS", u"ERROR" ]

    RULE_parse = 0
    RULE_expression = 1
    RULE_literal = 2

    ruleNames =  [ u"parse", u"expression", u"literal" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    AND=3
    OR=4
    COMPARATOR=5
    TEXT=6
    STRING=7
    WS=8
    ERROR=9

    def __init__(self, input, output=sys.stdout):
        super(ContactSearchParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ContactSearchParser.ParseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(ContactSearchParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(ContactSearchParser.EOF, 0)

        def getRuleIndex(self):
            return ContactSearchParser.RULE_parse

        def accept(self, visitor):
            if hasattr(visitor, "visitParse"):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = ContactSearchParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            self.expression(0)
            self.state = 7
            self.match(ContactSearchParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ContactSearchParser.ExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ContactSearchParser.RULE_expression

     
        def copyFrom(self, ctx):
            super(ContactSearchParser.ExpressionContext, self).copyFrom(ctx)


    class ImplicitConditionContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.ExpressionContext)
            super(ContactSearchParser.ImplicitConditionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TEXT(self):
            return self.getToken(ContactSearchParser.TEXT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitImplicitCondition"):
                return visitor.visitImplicitCondition(self)
            else:
                return visitor.visitChildren(self)


    class ConditionContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.ExpressionContext)
            super(ContactSearchParser.ConditionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TEXT(self):
            return self.getToken(ContactSearchParser.TEXT, 0)
        def COMPARATOR(self):
            return self.getToken(ContactSearchParser.COMPARATOR, 0)
        def literal(self):
            return self.getTypedRuleContext(ContactSearchParser.LiteralContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitCondition"):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)


    class CombinationAndContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.ExpressionContext)
            super(ContactSearchParser.CombinationAndContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ContactSearchParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ContactSearchParser.ExpressionContext,i)

        def AND(self):
            return self.getToken(ContactSearchParser.AND, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitCombinationAnd"):
                return visitor.visitCombinationAnd(self)
            else:
                return visitor.visitChildren(self)


    class CombinationImpicitAndContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.ExpressionContext)
            super(ContactSearchParser.CombinationImpicitAndContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ContactSearchParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ContactSearchParser.ExpressionContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitCombinationImpicitAnd"):
                return visitor.visitCombinationImpicitAnd(self)
            else:
                return visitor.visitChildren(self)


    class CombinationOrContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.ExpressionContext)
            super(ContactSearchParser.CombinationOrContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ContactSearchParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ContactSearchParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(ContactSearchParser.OR, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitCombinationOr"):
                return visitor.visitCombinationOr(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionGroupingContext(ExpressionContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.ExpressionContext)
            super(ContactSearchParser.ExpressionGroupingContext, self).__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(ContactSearchParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(ContactSearchParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(ContactSearchParser.RPAREN, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitExpressionGrouping"):
                return visitor.visitExpressionGrouping(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ContactSearchParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = ContactSearchParser.ExpressionGroupingContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 10
                self.match(ContactSearchParser.LPAREN)
                self.state = 11
                self.expression(0)
                self.state = 12
                self.match(ContactSearchParser.RPAREN)
                pass

            elif la_ == 2:
                localctx = ContactSearchParser.ConditionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 14
                self.match(ContactSearchParser.TEXT)
                self.state = 15
                self.match(ContactSearchParser.COMPARATOR)
                self.state = 16
                self.literal()
                pass

            elif la_ == 3:
                localctx = ContactSearchParser.ImplicitConditionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 17
                self.match(ContactSearchParser.TEXT)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 30
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 28
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = ContactSearchParser.CombinationAndContext(self, ContactSearchParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 20
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 21
                        self.match(ContactSearchParser.AND)
                        self.state = 22
                        self.expression(7)
                        pass

                    elif la_ == 2:
                        localctx = ContactSearchParser.CombinationImpicitAndContext(self, ContactSearchParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 23
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 24
                        self.expression(6)
                        pass

                    elif la_ == 3:
                        localctx = ContactSearchParser.CombinationOrContext(self, ContactSearchParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 25
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 26
                        self.match(ContactSearchParser.OR)
                        self.state = 27
                        self.expression(5)
                        pass

             
                self.state = 32
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ContactSearchParser.LiteralContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ContactSearchParser.RULE_literal

     
        def copyFrom(self, ctx):
            super(ContactSearchParser.LiteralContext, self).copyFrom(ctx)



    class StringLiteralContext(LiteralContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.LiteralContext)
            super(ContactSearchParser.StringLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ContactSearchParser.STRING, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitStringLiteral"):
                return visitor.visitStringLiteral(self)
            else:
                return visitor.visitChildren(self)


    class TextLiteralContext(LiteralContext):

        def __init__(self, parser, ctx): # actually a ContactSearchParser.LiteralContext)
            super(ContactSearchParser.TextLiteralContext, self).__init__(parser)
            self.copyFrom(ctx)

        def TEXT(self):
            return self.getToken(ContactSearchParser.TEXT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitTextLiteral"):
                return visitor.visitTextLiteral(self)
            else:
                return visitor.visitChildren(self)



    def literal(self):

        localctx = ContactSearchParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_literal)
        try:
            self.state = 35
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ContactSearchParser.TEXT]:
                localctx = ContactSearchParser.TextLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(ContactSearchParser.TEXT)
                pass
            elif token in [ContactSearchParser.STRING]:
                localctx = ContactSearchParser.StringLiteralContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.match(ContactSearchParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx, ruleIndex, predIndex):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx, predIndex):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         




